Fix alignment of search_wrapper els
In Firefox, the button is rendered with a height difference of about a
pixel in relation to the text input. By setting the line-height as well
the font-size to zero for the containing el, this element height issue
is resolved.

--- a/landingcorp/css/_template.scss
+++ b/landingcorp/css/_template.scss
@@ -388,6 +388,7 @@ body {
       font-size: 18px;
     }
     .search_wrapper {
+      line-height: 0;
       font-size: 0;
       input {
         width: 320px;
